# laulud

./: .gitignore  README.md  pyproject.toml
config/: ma_olen_viinapuu.yaml  meie_isa_palve_ii.yaml  meie_isa_palve_iii.yaml  models.yaml  song_input_example.yaml
prompts/: evaluation.hbs  writing.hbs
songs/: armastus.md  ma_olen_viinapuu.md  meie_isa_palv.md  meie_isa_palve_ii.md  meie_isa_palve_iii.md  meieisapalve.md
src/: generate_song.py
